src/styles/components/_notebook-panel.scss
/**
 * NOTEBOOK PANEL
 *
 * Panel to select the current notebook and change status (public, private, shared)
 */
 
/* ------------------------------------ *\
   #NOTEBOOK-PANEL
\* ------------------------------------ */
.pnd-notebook-panel {
    position: fixed;
    box-sizing: border-box;
    top: 56px;
    right: 0;
    padding: $space*2;
    width: $sidebar-exploded-width;
    z-index: $z-index-sidebar - 1;
    background-color: $color-background-base;
    color: $color-text;
    border-bottom: 1px solid $color-border-normal;
    @include cardShadow-1;
    
    /* Sections */
    &__section:not(:last-child) {
        margin-bottom: $space*1.5;
        padding-bottom: $space*2;
        border-bottom: 1px solid $color-border-normal;
    }

    /* Current notebook name */
    &__current-notebook-name {
        display: inline-block;
        // padding: $space/2 $space;
        font-weight: $font-weight-bold;
        font-size: $font-size-s;
        border-radius: $border-radius;
        // background-color: $color-background-medium;

        .pnd-svg-icon svg {
            width: 14px;
            height: auto;
        }
    }

    /* Utilities */
    .pnd-text {
        margin-bottom: $space;
    }

    /* Status */
    &__current-notebook-status {
        display: inline-block;
        margin-bottom: $space;
        // padding: $space/2 $space;
        font-weight: $font-weight-bold;
        font-size: $font-size-s;
        border-radius: $border-radius;
        // background-color: $color-background-medium;
    }
    
    /* Change status */
    &__change-status {
        padding-left: 20px;

        .pnd-btn {
            display: block; // ! To be removed when sharing will be implemented
            margin-right: $space/2;
            margin-bottom: $space/2; // ! To be removed when sharing will be implemented
        }

        .pnd-text-small {
            margin-bottom: 0;
        }
    }

    /* Notebook selection */
    .pnd-notebook-selector {
        width: 100%;
    }

    &__share-button {
        padding: 0 $space 0 $space * .5;
        span.button-label {
            margin-left: $space;
            flex-grow: 1;
        }
        span.button-icon {
            display: block;
            width: $font-size-s;
            
            .pnd-svg-icon-plus svg {
                width: $font-size-s;
                height: $font-size-s;
            }
        }
    }
}

